objects/Audit_Log_Report__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <inlineHelpText>The Login-As user who executed the action in Setup.</inlineHelpText>
        <label>Delegate User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <inlineHelpText>The full description of changes made in Setup</inlineHelpText>
        <label>Display</label>
        <length>50768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <formula>TEXT( DATETIMEVALUE( Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <inlineHelpText>The section in the Setup menu where the action occurred</inlineHelpText>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Audit Log Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALR-{00000}</displayFormat>
        <label>Audit Log Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>